smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control-with-invalid-key.smithy
// Parse error at line 4, column 1 near `$`: Expected [A-Za-z_] | Model
namespace foo.baz

$!foo: "1.0"
